[package]
name = "unkey-rust-actix"
version = "0.1.0"
edition = "2021"
authors = ["djnovin <hello@novinnoori.com>"]
description = "A Rust API service using Unkey for API key validation with the Actix Web framework."
license = "MIT"
repository = "https://github.com/djnovin/unkey-rust-actix"
readme = "README.md"
keywords = ["unkey", "api", "actix", "rust"]
categories = ["web-programming", "api", "security"]

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
unkey = "0.4"
